# simple_server_with_ws

./: .gitignore  board.py  examples.py  manage.py  pyproject.toml
app/: __init__.py
app/models/: common.py  message.py
app/services/: chess_service.py  connect_manager.py  game_manager.py
web/dependecies/: __init__.py  chess_service.py  common.py
